PR/38413: Takahiro Kambe: mt(1) print some junk output when using remote tape Not all fields are valid in the ioctl to get tape info in the rmt protocol. Zero out the struct so that we don't print junk. While here, KNF.